# divine

./: .gitignore  README.md  pyproject.toml
apps/article/: __main__.py
divine/: __init__.py  _screen.py  cursor.py  exceptions.py  heaven.py  idk.py  layout.py  paradise.py  realm.py  screen.py  types.py
divine/colors/: __init__.py  base.py  hexatone.py  rgb.py
divine/components/: __init__.py  border.py  write.py
divine/domains/: STDSCR.py  __init__.py  heaven.py  paradise.py  realm.py  screen.py  stdscr.py
divine/organs/: __init__.py  attribute.py  border.py  cursor.py  layout.py
divine/utilities/: __init__.py  extra.py  types.py
divine/utilities/colors/: hexatone.py  rgb.py
examples/apps/main_menu/: __main__.py
examples/better_getstr/: __main__.py
examples/colors/: __main__.py
examples/main_menu/: __main__.py
examples/usages/methods/: listen.py
lazy_tests/: test_heaven.py  test_realm.py  test_screen.py  test_write.py
tests/: infinite_square_repetition.py  test_domains.py  test_heaven.py  test_paradise.py  test_raw.py  test_realm.py  test_screen.py
tests/test_layout/: test_validate.py
usages/: ALL_THESE_FILES_ARE_RAW  _realm.py
