[project]
name = "divine"
version = "0.1.0"
description = ""
authors = [
    {name = "biscuit",email = "nayyaungoo@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "python-box (>=7.3.2,<8.0.0)",
    "prodict (>=0.8.20,<0.9.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
